--- a/boardgame/residentevil.html
+++ b/boardgame/residentevil.html
@@ -5,8 +5,14 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
         <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script> -->
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
     </head>
     <body>
+         <nav class="navbar bg-primary" data-bs-theme="dark">
+            <div class="container-fluid">
+               <a class="navbar-brand" href="../index.html">Board Game Tracker</a>
+            </div>
+         </nav>
         <div class="container">
             <h3>Characters</h3>
             <div class="container">
@@ -102,11 +108,15 @@
                 </div>
             </div>
             <div id="popupMenu" style="display: none;">
-                <ul>
-                  <li><a href="#">Item 1</a></li>
-                  <li><a href="#">Item 2</a></li>
-                  <li><a href="#">Item 3</a></li>
-                </ul>
+               <div class="card">
+                  <div class="card-body">
+                     <div class="d-grid gap-2 d-md-block">
+                        <button class="btn btn-primary" type="button">Reveal <i class="bi bi-eye"></i></button>
+                        <button class="btn btn-success" type="button">Complete <i class="bi bi-check2-circle"></i></button>
+                        <button class="btn btn-secondary" type="button">Unlock <i class="bi bi-unlock"></i></button>
+                      </div>
+                  </div>
+               </div>
               </div>
             <h3>Reserve</h3>
             <div class="container">
