--- a/boardgame/residentevil3.html
+++ b/boardgame/residentevil3.html
@@ -9,6 +9,11 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
     </head>
     <body>
+        <nav class="navbar bg-primary" data-bs-theme="dark">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="../index.html">Board Game Tracker</a>
+            </div>
+        </nav>
         <div class="container">
             <div class="alert alert-warning" role="alert">
                 This page use the browser storage to keep it's data. In case of a clean up you can lose everything
