--- a/index.html
+++ b/index.html
@@ -1,6 +1,24 @@
 <html>
+    <head>
+        <title>Board Game Tracker</title>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
+    </head>
     <body>
-        <a href="residentevil/index.html">Resident Evil</a>
-        <a href="boardgame/residentevil3.html">Resident Evil 3</a>
+        <nav class="navbar bg-primary" data-bs-theme="dark">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">Board Game Tracker</a>
+            </div>
+        </nav>
+        <div class="container">
+            <h3>Board Games</h3>
+            <ul class="list-group">
+                <li class="list-group-item"><a href="boardgame/residentevil.html">Resident Evil</a></li>
+                <li class="list-group-item"><a href="boardgame/residentevil3.html">Resident Evil 3</a></li>
+            </ul>
+        </div>
+        
     </body>
 </html>
