feat: refactor and character reserve

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <div class="container">
             <h3>Board Games</h3>
             <ul class="list-group">
-                <li class="list-group-item"><a href="boardgame/residentevil.html">Resident Evil</a></li>
-                <li class="list-group-item"><a href="boardgame/residentevil3.html">Resident Evil 3</a></li>
+                <li class="list-group-item"><a href="pages/boardgame/residentevil.html">Resident Evil</a></li>
+                <li class="list-group-item"><a href="pages/boardgame/residentevil3.html">Resident Evil 3</a></li>
             </ul>
         </div>
         
