--- a/pages/boardgame/residentevil.html
+++ b/pages/boardgame/residentevil.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
     <head>
         <title>Resident Evil - Board Game Tracker</title>
@@ -10,7 +11,7 @@
     <body>
          <nav class="navbar bg-primary" data-bs-theme="dark">
             <div class="container-fluid">
-               <a class="navbar-brand" href="../index.html">Board Game Tracker</a>
+               <a class="navbar-brand" href="../../index.html">Board Game Tracker</a>
             </div>
          </nav>
          <div class="container">
@@ -1673,8 +1674,10 @@
             </svg>
         </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
-        <script src="../assets/js/utils.js"></script>
-        <script src="../assets/js/dom/componentCreator.js"></script>
-        <script src="../assets/js/boardgame/residentevil.js"></script>
+        <script src="../../js/utils.js"></script>
+        <script src="../../js/dom/componentCreator.js"></script>
+        <script src="../../js/boardgame/residentevil.js"></script>
+        <script src="../../js/boardgame/residentevil/characters.js"></script>
+        <script src="../../js/boardgame/residentevil/mapHandler.js"></script>
     </body>
 </html>
