--- a/pages/boardgame/residentevil3.html
+++ b/pages/boardgame/residentevil3.html
@@ -11,7 +11,7 @@
     <body>
         <nav class="navbar bg-primary" data-bs-theme="dark">
             <div class="container-fluid">
-                <a class="navbar-brand" href="../index.html">Board Game Tracker</a>
+                <a class="navbar-brand" href="../../index.html">Board Game Tracker</a>
             </div>
         </nav>
         <div class="container">
@@ -273,8 +273,8 @@
             </div>
         </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
-        <script src="../assets/js/utils.js"></script>
-        <script src="../assets/js/dom/componentCreator.js"></script>
-        <script src="../assets/js/boardgame/residentevil3.js"></script>
+        <script src="../../js/utils.js"></script>
+        <script src="../../js/dom/componentCreator.js"></script>
+        <script src="../../js/boardgame/residentevil3.js"></script>
     </body>
 </html>
