feat: responsive table

--- a/pages/boardgame/residentevil.html
+++ b/pages/boardgame/residentevil.html
@@ -145,7 +145,8 @@
              </div>
             <h3>Reserve</h3>
             <div class="container">
-                <table class="table" id="reserveCharacters">
+              <div class="table-responsive">
+                <table class="table" id="reserveCharacters" style="overflow-x: auto;">
                     <thead>
                         <tr>
                             <th scope="col">Character</th>
@@ -158,6 +159,7 @@
                     <tbody>
                     </tbody>
                 </table>
+              </div>
             </div>
             <hr/>
             <h3>Item Box</h3>
