--- a/pages/boardgame/residentevil.html
+++ b/pages/boardgame/residentevil.html
@@ -1749,6 +1749,7 @@
         </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
         <script src="../../js/utils.js"></script>
+        <script src="../../js/boardgame/residentevil/gameStatus.js"></script>
         <script src="../../js/dom/componentCreator.js"></script>
         <script src="../../js/boardgame/residentevil.js"></script>
         <script src="../../js/boardgame/residentevil/characters.js"></script>
