--- a/pages/boardgame/residentevil.html
+++ b/pages/boardgame/residentevil.html
@@ -35,17 +35,18 @@
                                 <label for="customRange1" class="form-label">Kerosene</label>
                                 <input type="number" min="1" max="10" class="form-control" onchange="handleCharacterKeroseneChange(event)" id="characterKerosene1">
                                 <h5 class="mt-3">Inventory</h5>
-                                    <div class="container">
-                                        <div class="row text-center">
-                                            <div class="col">
-                                                <p>Handgun</p>
-                                            </div>
-                                            <div class="col">
-                                                <input type="number" class="form-control" placeholder="Ammo" aria-label="Ammo" aria-describedby="basic-addon1">
-                                            </div>
-                                        </div>
+                                    <div class="row">
+                                      <div class="col">
+                                          <select class="form-select" aria-label="Character 1 Item Select" id="character1ItemSelect">
+                                              <option>Select Item</option>
+                                          </select>
+                                      </div>
+                                      <div class="col mb-3">
+                                          <button type="button" class="btn btn-primary" onclick="addCharacterItem(0)">Add Item</button>
+                                      </div>
                                     </div>
-                                    <hr/>
+                                    <ul class="list-group" id="character1InventoryList">
+                                    </ul>
                             </div>
                         </div>
                     </div>
@@ -60,15 +61,18 @@
                                 <label for="customRange1" class="form-label">Kerosene</label>
                                 <input type="number" min="1" max="10" class="form-control" onchange="handleCharacterKeroseneChange(event)" id="characterKerosene2">
                                 <h5 class="mt-3">Inventory</h5>
-                                        <div class="row text-center">
-                                            <div class="col">
-                                                <p>Handgun</p>
-                                            </div>
-                                            <div class="col">
-                                                <input type="number" class="form-control" placeholder="Ammo" aria-label="Ammo" aria-describedby="basic-addon1">
-                                            </div>
-                                        </div>
-                                    <hr/>
+                                  <div class="row">
+                                    <div class="col">
+                                        <select class="form-select" aria-label="Character 2 Item Select" id="character2ItemSelect">
+                                            <option>Select Item</option>
+                                        </select>
+                                    </div>
+                                    <div class="col mb-3">
+                                        <button type="button" class="btn btn-primary" onclick="addCharacterItem(1)">Add Item</button>
+                                    </div>
+                                  </div>
+                                  <ul class="list-group" id="character2InventoryList">
+                                  </ul>
                             </div>
                         </div>
                     </div>
@@ -83,15 +87,18 @@
                                 <label for="customRange1" class="form-label">Kerosene</label>
                                 <input type="number" min="1" max="10" class="form-control" onchange="handleCharacterKeroseneChange(event)" id="characterKerosene3">
                                 <h5 class="mt-3">Inventory</h5>
-                                        <div class="row text-center">
-                                            <div class="col">
-                                                <p>Handgun</p>
-                                            </div>
-                                            <div class="col">
-                                                <input type="number" class="form-control" placeholder="Ammo" aria-label="Ammo" aria-describedby="basic-addon1">
-                                            </div>
-                                        </div>
-                                    <hr/>
+                                  <div class="row">
+                                    <div class="col">
+                                        <select class="form-select" aria-label="Character 3 Item Select" id="character3ItemSelect">
+                                            <option>Select Item</option>
+                                        </select>
+                                    </div>
+                                    <div class="col mb-3">
+                                        <button type="button" class="btn btn-primary" onclick="addCharacterItem(2)">Add Item</button>
+                                    </div>
+                                  </div>
+                                  <ul class="list-group" id="character3InventoryList">
+                                  </ul>
                             </div>
                         </div>
                     </div>
@@ -106,22 +113,24 @@
                                 <label for="customRange1" class="form-label">Kerosene</label>
                                 <input type="number" min="1" max="10" class="form-control" onchange="handleCharacterKeroseneChange(event)" id="characterKerosene4">
                                 <h5 class="mt-3">Inventory</h5>
-                                    <div class="container">
-                                        <div class="row text-center">
-                                            <div class="col">
-                                                <p>Handgun</p>
-                                            </div>
-                                            <div class="col">
-                                                <input type="number" class="form-control" placeholder="Ammo" aria-label="Ammo" aria-describedby="basic-addon1">
-                                            </div>
-                                        </div>
+                                  <div class="row">
+                                    <div class="col">
+                                        <select class="form-select" aria-label="Character 4 Item Select" id="character4ItemSelect">
+                                            <option>Select Item</option>
+                                        </select>
                                     </div>
-                                    <hr/>
+                                    <div class="col mb-3">
+                                        <button type="button" class="btn btn-primary" onclick="addCharacterItem(3)">Add Item</button>
+                                    </div>
+                                  </div>
+                                  <ul class="list-group" id="character4InventoryList">
+                                  </ul>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
+            <hr />
              <div class="modal fade" id="mapModal" tabindex="-1" aria-labelledby="mapModalLabel" aria-hidden="true">
                <div class="modal-dialog">
                  <div class="modal-content">
