--- a/pages/boardgame/residentevil.html
+++ b/pages/boardgame/residentevil.html
@@ -238,7 +238,7 @@
                 id="map"
                 width="100%"
                 height="100%"
-                viewBox="0 0 700 700"
+                viewBox="0 0 700 500"
                 version="1.1"
                 xmlns="http://www.w3.org/2000/svg"
                 xmlns:xlink="http://www.w3.org/1999/xlink"
@@ -1755,8 +1755,14 @@
                   pointer-events="stroke"
                   id="path109" /></g></g></g>
             </svg>
+            <div class="container text-center mb-3">
+              <button type="button" class="btn btn-primary" onclick="exportData('resident_evil')">Export<a id="exportFile"></a></button>
+              <button type="button" class="btn btn-primary" onclick="importData()">Import</button>
+              <button type="button" class="btn btn-danger" onclick="clearAllData()">Clear Data</button>
+            </div>
         </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
+        <script src="../../js/modules/io.js"></script>
         <script src="../../js/utils.js"></script>
         <script src="../../js/boardgame/residentevil/gameStatus.js"></script>
         <script src="../../js/dom/componentCreator.js"></script>
