feat: code cleanup

--- a/pages/boardgame/residentevil.html
+++ b/pages/boardgame/residentevil.html
@@ -15,6 +15,7 @@
             </div>
          </nav>
          <div class="container">
+          <h1>Resident Evil: The Board Game</h1>
             <div class="container mt-3 mb-3">
               <!-- Hand(1-4), Teeth(5-13), Skull(14-21)-->
               <h3>Threat Level</h3>
