fix: threat level loading

--- a/index.html
+++ b/index.html
@@ -15,8 +15,16 @@
         <div class="container">
             <h3>Board Games</h3>
             <ul class="list-group">
-                <li class="list-group-item"><a href="pages/boardgame/residentevil.html">Resident Evil</a></li>
-                <li class="list-group-item"><a href="pages/boardgame/residentevil3.html">Resident Evil 3</a></li>
+                <li class="list-group-item">
+                    <a href="pages/boardgame/residentevil.html">
+                        <img width="100" height="100" src="https://cf.geekdo-images.com/-cdkttxVSfDG5nfvTyhOqQ__itemrep/img/i7N82QV2jNvaTgmbcwTJo6Hiz6w=/fit-in/246x300/filters:strip_icc()/pic6465101.png" class="img-thumbail">Resident Evil: The Board Game
+                    </a>
+                </li>
+                <li class="list-group-item">
+                    <a href="pages/boardgame/residentevil3.html">
+                        <img width="100" height="100" src="https://m.media-amazon.com/images/W/MEDIAX_792452-T2/images/I/81FUczD294L.jpg" class="img-thumbail">Resident Evil 3: The Board Game
+                    </a>
+                </li>
             </ul>
         </div>
         
