feat: code refactor

--- a/pages/boardgame/residentevil3.html
+++ b/pages/boardgame/residentevil3.html
@@ -183,7 +183,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col">
-                        <select class="form-select" aria-label="Narrative Select" id="narrativeSelect">
+                        <select class="form-select" aria-label="Narrative Select" id="narrativeCardSelect">
                             <option>Select Narrative</option>
                         </select>
                     </div>
@@ -223,8 +223,9 @@
         <script src="../../js/modules/io.js"></script>
         <script src="../../js/utils.js"></script>
         <script src="../../js/dom/componentCreator.js"></script>
+        <script src="../../js/boardgame/residentevil/core/cardsHandler.js"></script>
         <script src="../../js/boardgame/residentevil3/gameStatus.js"></script>
-        <script src="../../js/boardgame/residentevil3/characters.js"></script>
+        <script src="../../js/boardgame/residentevil/core/characters.js"></script>
         <script src="../../js/boardgame/residentevil3.js"></script>
     </body>
 </html>
