--- a/pages/boardgame/residentevil.html
+++ b/pages/boardgame/residentevil.html
@@ -17,22 +17,22 @@
           <div class="container">
           <h1>Resident Evil: The Board Game</h1>
           <div class="container mt-3">
-            <div class="row">
-              <div class="col">
+            <div class="row text-center">
+              <div class="col-md-8 col-xs-12 mb-3">
                 <select class="form-select" aria-label="Campaign Select" id="campaignSelect" onchange="handleCampaignChange(event)">
                   <option> Select Campaign</option>
                 </select>
               </div>
-              <div class="col-2">
-                <button type="button" class="btn btn-primary" onclick="createNewCampaign()">New Campaign</button>
+              <div class="col-md-2 col-xs-4 mb-3">
+                <button type="button" class="btn btn-primary btn-sm" onclick="createNewCampaign()">New Campaign</button>
               </div>
-              <div class="col-2">
-                <button type="button" class="btn btn-danger" onclick="deleteCampaign()">Delete Campaign</button>
+              <div class="col-md-2 col-xs-4">
+                <button type="button" class="btn btn-danger btn-sm" onclick="deleteCampaign()">Delete Campaign</button>
               </div>
             </div>
             <div class="row mt-3">
-              <label for="campaignTitle" class="col-2 col-form-label">Campaign Title</label>
-              <div class="col">
+              <label for="campaignTitle" class="col-md-2 col-xs-12 col-form-label">Campaign Title</label>
+              <div class="col-md-8 col-xs-12">
                 <input type="text" id="campaignTitle" onchange="handleChangeTitle(event)" placeholder="Campaign Title" class="form-control">
               </div>
             </div>
