--- a/pages/boardgame/residentevil3.html
+++ b/pages/boardgame/residentevil3.html
@@ -36,7 +36,7 @@
                 <div class="row mt-3">
                   <label for="campaignTitle" class="col-md-2 col-xs-12 col-form-label">Campaign Title</label>
                   <div class="col-md-8 col-xs-12">
-                    <input type="text" id="campaignTitle" onchange="handleChangeTitle(event)" placeholder="Campaign Title" class="form-control">
+                    <input type="text" id="campaignTitle" onchange="handleCampaignTitleChange(event)" placeholder="Campaign Title" class="form-control">
                   </div>
                 </div>
             </div>
