feat: base mice and mystics

--- a/pages/boardgame/mice_and_mystics.html
+++ b/pages/boardgame/mice_and_mystics.html
@@ -85,7 +85,7 @@
                 </div>
             </div>
             <div class="container text-center mb-3">
-                <button type="button" class="btn btn-primary" onclick="exportData('resident_evil3')">Export<a id="exportFile"></a></button>
+                <button type="button" class="btn btn-primary" onclick="exportGameData()">Export<a id="exportFile"></a></button>
                 <button type="button" class="btn btn-primary" onclick="importData()">Import</button>
                 <button type="button" class="btn btn-danger" onclick="clearAllData()">Clear Data</button>
             </div>
