fix: store player name

--- a/index.html
+++ b/index.html
@@ -25,13 +25,8 @@
             <h3>Board Games</h3>
             <ul class="list-group">
                 <li class="list-group-item">
-                    <a href="pages/boardgame/residentevil3.html">
-                        <img width="100" height="100" src="https://www.thegamesteward.com/cdn/shop/products/gloomhaven-kickstarter-special-kickstarter-board-game-cephalofair-games-25679832187032.jpg?v=1632982906" class="img-thumbail">Gloomhaven (In Development)
-                    </a>
-                </li>
-                <li class="list-group-item">
                     <a href="pages/boardgame/mice_and_mystics.html">
-                        <img width="100" height="100" src="https://m.media-amazon.com/images/I/819-WHSONaL.jpg" class="img-thumbail">Mice and Mystics (In Development)
+                        <img width="100" height="100" src="https://m.media-amazon.com/images/I/819-WHSONaL.jpg" class="img-thumbail">Mice and Mystics
                     </a>
                 </li>
                 <li class="list-group-item">
