feat: small improvement to SEO

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
     <head>
         <title>Board Game Tracker</title>
         <meta charset="utf-8">
@@ -14,6 +15,7 @@
 
         gtag('config', 'G-4H0C61C0KZ');
         </script>
+        <meta name="description" content="Web application to keep track of board game campaigns">
     </head>
     <body>
         <nav class="navbar bg-primary" data-bs-theme="dark">
@@ -22,6 +24,10 @@
             </div>
         </nav>
         <div class="container">
+            <h1>Board Game Tracker</h1>
+            <p>A web application to keep track of your board game campaigns. Now you can easily save your game progress without the use of a spreadsheet or papers,
+                just select your game and it's ready to start.
+            </p>
             <h3>Board Games</h3>
             <ul class="list-group">
                 <li class="list-group-item">
