--- a/pages/boardgame/mice_and_mystics.html
+++ b/pages/boardgame/mice_and_mystics.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <title>BG Tracker - Mice and Mystics</title>
         <meta charset="utf-8">
