--- a/pages/boardgame/residentevil.html
+++ b/pages/boardgame/residentevil.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <title>Resident Evil - Board Game Tracker</title>
         <meta charset="utf-8">
