--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
             <ul class="list-group">
                 <li class="list-group-item">
                     <a href="pages/boardgame/mice_and_mystics.html">
+                        <img width="100" height="100" src="https://m.media-amazon.com/images/I/71eJzGGOlnL.jpg" class="img-thumbail">Dark Souls: The Board Game
+                    </a>
+                </li>
+                <li class="list-group-item">
+                    <a href="pages/boardgame/mice_and_mystics.html">
                         <img width="100" height="100" src="https://m.media-amazon.com/images/I/819-WHSONaL.jpg" class="img-thumbail">Mice and Mystics
                     </a>
                 </li>
