--- a/pages/boardgame/dark_souls.html
+++ b/pages/boardgame/dark_souls.html
@@ -8,14 +8,14 @@
         <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script> -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
         <!-- Google tag (gtag.js) -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=G-4H0C61C0KZ"></script>
+        <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-4H0C61C0KZ"></script>
         <script>
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
 
         gtag('config', 'G-4H0C61C0KZ');
-        </script>
+        </script> -->
     </head>
     <body>
         <nav class="navbar bg-primary" data-bs-theme="dark">
@@ -79,6 +79,27 @@
                     </div>
                 </div>
             </div>
+            <hr>
+            <h3>Campaign</h3>
+            <div class="container">
+                <div class="table-responsive">
+                  <table class="table" id="campaignTable" style="overflow-x: auto;">
+                      <thead>
+                          <tr>
+                              <th scope="col">Campaign</th>
+                              <th scope="col">Section 1</th>
+                              <th scope="col">Section 2</th>
+                              <th scope="col">Section 3</th>
+                              <th scope="col">Section 4</th>
+                              <th scope="col">Section 5</th>
+                              <th scope="col">Section 6</th>
+                          </tr>
+                      </thead>
+                      <tbody>
+                      </tbody>
+                  </table>
+                </div>
+            </div>
             <div class="container text-center mb-3">
                 <button type="button" class="btn btn-primary" onclick="exportGameData()">Export<a id="exportFile"></a></button>
                 <button type="button" class="btn btn-primary" onclick="importData()">Import</button>
@@ -89,7 +110,7 @@
         <script src="../../js/modules/io.js"></script>
         <script src="../../js/utils.js"></script>
         <script src="../../js/dom/componentCreator.js"></script>
-        <script src="../../js/boardgame/mice_and_mystics/gameStatus.js"></script>
-        <script src="../../js/boardgame/mice_and_mystics/main.js"></script>
+        <script src="../../js/boardgame/dark_souls/gameStatus.js"></script>
+        <script src="../../js/boardgame/dark_souls/main.js"></script>
     </body>
 </html>
