--- a/pages/boardgame/dark_souls.html
+++ b/pages/boardgame/dark_souls.html
@@ -50,31 +50,101 @@
                 </div>
             </div>
             <hr>
+            <div class="container">
+                <div class="row">
+                    <div class="col-xs-6 col-sm-4 col-md-2">
+                        <label for="souls" class="col-form-label">Souls</label>
+                    </div>
+                    <div class="col-xs-6 col-sm-6 col-md-2">
+                        <input class="form-control" id="souls" type="number">
+                    </div>
+                    <div class="col-xs-6 col-sm-4 col-md-2">
+                        <label for="sparks" class="col-form-label">Sparks</label>
+                    </div>
+                    <div class="col-xs-6 col-sm-6 col-md-2">
+                        <input class="form-control" id="sparks" type="number">
+                    </div>
+                </div>
+            </div>
+            <hr>
             <h3>Characters</h3>
             <div class="container">
                 <div class="row">
-                    <div class="col-md-3 col-xs-12">
+                    <div class="col-md-4 col-xs-12">
                         <div class="card">
                             <div class="card-body">
                                 <select class="form-select" aria-label="Character Select 1" id="characterSelect1">
                                     <option>Select Class</option>
                                 </select>
-                                <label for="customRange1" class="form-label">Health</label>
-                                <input type="number" min="1" max="5" onchange="handleCharacterLifeChange(event)" class="form-control" id="characterHealth1">
                                 <h5 class="mt-3">Equip</h5>
                                 <label for="customRange1" class="form-label">Left Hand</label>
                                 <label for="customRange1" class="form-label">Right Hand</label>
                                 <label for="customRange1" class="form-label">Armor</label>
                                 <h5 class="mt-3">Status</h5>
-                                <label for="customRange1" class="form-label">Strength</label>
-                                <input type="number" min="1" max="10" class="form-control" onchange="handleCharacterKeroseneChange(event)" id="characterStrength1">
-                                <label for="customRange1" class="form-label">Dexterity</label>
-                                <input type="number" min="1" max="10" class="form-control" onchange="handleCharacterKeroseneChange(event)" id="characterDexterity1">
-                                <label for="customRange1" class="form-label">Intelligence</label>
-                                <input type="number" min="1" max="10" class="form-control" onchange="handleCharacterKeroseneChange(event)" id="characterIntelligence1">
-                                <label for="customRange1" class="form-label">Faith</label>
-                                <input type="number" min="1" max="10" class="form-control" onchange="handleCharacterKeroseneChange(event)" id="characterFaith1">
-                                
+                                <div class="row mb-3">
+                                    <div class="col-sm-3 col-md-4">
+                                        <label for="customRange1" class="form-label">Strength</label>
+                                    </div>
+                                    <div class="col-sm-3 col-md-3">
+                                        <input type="number" min="1" max="10" class="form-control" id="characterStrength1" disabled readonly>
+                                    </div>
+                                    <div class="col-sm-3 col-md-5">
+                                        <select class="form-select">
+                                            <option>Base</option>
+                                            <option>Tier 1</option>
+                                            <option>Tier 2</option>
+                                            <option>Tier 3</option>
+                                        </select>
+                                    </div>
+                                </div>
+                                <div class="row mb-3">
+                                    <div class="col-sm-3 col-md-4">
+                                        <label for="customRange1" class="form-label">Dexterity</label>
+                                    </div>
+                                    <div class="col-sm-3 col-md-3">
+                                        <input type="number" min="1" max="10" class="form-control" id="characterStrength1" disabled readonly>
+                                    </div>
+                                    <div class="col-sm-3 col-md-5">
+                                        <select class="form-select">
+                                            <option>Base</option>
+                                            <option>Tier 1</option>
+                                            <option>Tier 2</option>
+                                            <option>Tier 3</option>
+                                        </select>
+                                    </div>
+                                </div>
+                                <div class="row mb-3">
+                                    <div class="col-sm-3 col-md-4">
+                                        <label for="customRange1" class="form-label">Intelligence</label>
+                                    </div>
+                                    <div class="col-sm-3 col-md-3">
+                                        <input type="number" min="1" max="10" class="form-control" id="characterStrength1" disabled readonly>
+                                    </div>
+                                    <div class="col-sm-3 col-md-5">
+                                        <select class="form-select">
+                                            <option>Base</option>
+                                            <option>Tier 1</option>
+                                            <option>Tier 2</option>
+                                            <option>Tier 3</option>
+                                        </select>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-sm-3 col-md-4">
+                                        <label for="customRange1" class="form-label">Faith</label>
+                                    </div>
+                                    <div class="col-sm-3 col-md-3">
+                                        <input type="number" min="1" max="10" class="form-control" id="characterStrength1" disabled readonly>
+                                    </div>
+                                    <div class="col-sm-3 col-md-5">
+                                        <select class="form-select">
+                                            <option>Base</option>
+                                            <option>Tier 1</option>
+                                            <option>Tier 2</option>
+                                            <option>Tier 3</option>
+                                        </select>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
