feat: character changes and loading

--- a/pages/boardgame/dark_souls.html
+++ b/pages/boardgame/dark_souls.html
@@ -118,24 +118,17 @@
                                         <label for="customRange1" class="form-label">Left Hand</label>
                                     </div>
                                     <div class="col">
-                                        <select class="form-select">
-                                            <option>Weapon</option>
+                                        <select class="form-select" id="character1LeftHandSelect" onchange="handleCharacterItemChange(event)">
+                                            <option value="">Weapon/Shield/Spell</option>
                                         </select>
                                     </div>
                                 </div>
                                 <div class="row mt-2">
                                     <div class="col-sm-6 col-md-3">
-                                        <label for="customRange1" class="form-label">Upgrades</label>
+                                        <label for="customRange1" class="form-label">Notes</label>
                                     </div>
-                                    <div class="col">
-                                        <select class="form-select">
-                                            <option>Upgrade 1</option>
-                                        </select>
-                                    </div>
-                                    <div class="col">
-                                        <select class="form-select">
-                                            <option>Upgrade 1</option>
-                                        </select>
+                                    <div class="col-sm-6 col-md-9">
+                                        <input class="form-control" id="character1LeftHandNotes" onchange="handleCharacterItemNotesChange(event)">
                                     </div>
                                 </div>
                                 <hr>
@@ -144,24 +137,19 @@
                                         <label for="customRange1" class="form-label">Right Hand</label>
                                     </div>
                                     <div class="col">
-                                        <select class="form-select">
-                                            <option>Weapon</option>
+                                        <select class="form-select" id="character1RightHandSelect" onchange="handleCharacterItemChange(event)">
+                                            <option value="">Weapon/Shield/Spell</option>
                                         </select>
                                     </div>
                                 </div>
                                 <div class="row mt-2">
-                                    <div class="col-sm-6 col-md-3">
-                                        <label for="customRange1" class="form-label">Upgrades</label>
-                                    </div>
-                                    <div class="col">
-                                        <select class="form-select">
-                                            <option>Upgrade 1</option>
-                                        </select>
-                                    </div>
-                                    <div class="col">
-                                        <select class="form-select">
-                                            <option>Upgrade 1</option>
-                                        </select>
+                                    <div class="row mt-2">
+                                        <div class="col-sm-6 col-md-3">
+                                            <label for="customRange1" class="form-label">Notes</label>
+                                        </div>
+                                        <div class="col-sm-6 col-md-9">
+                                            <input class="form-control" id="character1RightHandNotes" onchange="handleCharacterItemNotesChange(event)">
+                                        </div>
                                     </div>
                                 </div>
                                 <hr>
@@ -170,24 +158,19 @@
                                         <label for="customRange1" class="form-label">Armor</label>
                                     </div>
                                     <div class="col">
-                                        <select class="form-select">
-                                            <option>Armor</option>
+                                        <select class="form-select" id="character1ArmorSelect" onchange="handleCharacterItemChange(event)">
+                                            <option value="">Armor</option>
                                         </select>
                                     </div>
                                 </div>
                                 <div class="row mt-2">
-                                    <div class="col-sm-6 col-md-3">
-                                        <label for="customRange1" class="form-label">Upgrades</label>
-                                    </div>
-                                    <div class="col">
-                                        <select class="form-select">
-                                            <option>Upgrade 1</option>
-                                        </select>
-                                    </div>
-                                    <div class="col">
-                                        <select class="form-select">
-                                            <option>Upgrade 1</option>
-                                        </select>
+                                    <div class="row mt-2">
+                                        <div class="col-sm-6 col-md-3">
+                                            <label for="customRange1" class="form-label">Notes</label>
+                                        </div>
+                                        <div class="col-sm-6 col-md-9">
+                                            <input class="form-control" id="character1ArmorNotes" onchange="handleCharacterItemNotesChange(event)">
+                                        </div>
                                     </div>
                                 </div>
                                 <hr>
@@ -196,24 +179,19 @@
                                         <label for="customRange1" class="form-label">Belt</label>
                                     </div>
                                     <div class="col">
-                                        <select class="form-select">
-                                            <option>Weapon</option>
+                                        <select class="form-select" id="character1BeltSelect" onchange="handleCharacterItemChange(event)">
+                                            <option value="">Weapon/Shield/Spell</option>
                                         </select>
                                     </div>
                                 </div>
                                 <div class="row mt-2">
-                                    <div class="col-sm-6 col-md-3">
-                                        <label for="customRange1" class="form-label">Upgrades</label>
-                                    </div>
-                                    <div class="col">
-                                        <select class="form-select">
-                                            <option>Upgrade 1</option>
-                                        </select>
-                                    </div>
-                                    <div class="col">
-                                        <select class="form-select">
-                                            <option>Upgrade 1</option>
-                                        </select>
+                                    <div class="row mt-2">
+                                        <div class="col-sm-6 col-md-3">
+                                            <label for="customRange1" class="form-label">Notes</label>
+                                        </div>
+                                        <div class="col-sm-6 col-md-9">
+                                            <input class="form-control" id="character1BeltNotes" onchange="handleCharacterItemNotesChange(event)">
+                                        </div>
                                     </div>
                                 </div>
                                 <hr>
