feat: add item deck A

--- a/pages/boardgame/residentevil.html
+++ b/pages/boardgame/residentevil.html
@@ -234,6 +234,22 @@
             </div>
             <div class="row" id="itemBox"></div>
           </div>
+          <hr>
+          <h3>Item A Deck</h3>
+          <div class="container">
+            <div class="row">
+              <div class="col">
+                <select class="form-select" aria-label="Item Select" id="itemASelect">
+                  <option>Select Item</option>
+                </select>
+              </div>
+              <div class="col mb-3">
+                <button type="button" class="btn btn-primary" onclick="addItemDeckCardButton()">Add Item</button>
+              </div>
+            </div>
+            <div class="row" id="itemADeck"></div>
+          </div>
+          <hr>
         </div>
         <div class="tab-pane fade" id="contact-tab-pane" role="tabpanel" aria-labelledby="contact-tab" tabindex="0">
           <h3>Tension Deck</h3>
