feat: concept encounter cards

--- a/pages/boardgame/residentevil.html
+++ b/pages/boardgame/residentevil.html
@@ -299,6 +299,21 @@
             <div class="row" id="missionDeck"></div>
           </div>
           <hr />
+          <h3>Encounters</h3>
+          <div class="container">
+            <div class="row">
+              <div class="col">
+                <select class="form-select" aria-label="Item Select" id="encounterCardSelect">
+                  <option>Select Encounter Card</option>
+                </select>
+              </div>
+              <div class="col mb-3">
+                <button type="button" class="btn btn-primary" onclick="addEncounterCardButton()">Add Encounter Card</button>
+              </div>
+            </div>
+            <div class="row" id="encounterDeck"></div>
+          </div>
+          <hr />
         </div>
         <div class="tab-pane fade" id="map-tab-pane" role="tabpanel" aria-labelledby="map-tab" tabindex="0">
           <h3>Mansion Map</h3>
