--- a/pages/boardgame/mice_and_mystics.html
+++ b/pages/boardgame/mice_and_mystics.html
@@ -33,6 +33,7 @@
                     <img src="../../images/icons/logo.png" alt="Bootstrap" width="32" height="32" class="d-inline-block align-text-top">
                     Board Game Campaign Tracker
                 </a>
+                <a href="https://www.buymeacoffee.com/jdrcabral" target="_blank"><img src="https://cdn.buymeacoffee.com/buttons/v2/default-violet.png" alt="Buy Me A Coffee" style="height: 60px !important;width: 217px !important;" ></a>
             </div>
         </nav>
         <div class="container">
