--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Board Game Tracker</title>
+        <title>Board Game Campaign Tracker</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="description" content="Board Game Campaign Tracker is a tool to help you track of your campaigns without the need of spreadsheet or paper">
+        <meta name="keywords" content="board, game, campaign, tracker">
+        <link rel="icon" type="image/png" href="images/icons/favicon-32.png" sizes="32x32" />
+        <link rel="icon" type="image/png" href="images/icons/favicon-16.png" sizes="16x16" />
+
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
         <!-- Google tag (gtag.js) -->
@@ -15,12 +20,14 @@
 
         gtag('config', 'G-4H0C61C0KZ');
         </script>
-        <meta name="description" content="Web application to keep track of board game campaigns">
     </head>
     <body>
         <nav class="navbar bg-primary" data-bs-theme="dark">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">Board Game Tracker</a>
+                <a class="navbar-brand" href="#">
+                    <img src="/images/icons/logo.png" alt="Bootstrap" width="32" height="32" class="d-inline-block align-text-top">
+                    Board Game Tracker
+                </a>
             </div>
         </nav>
         <div class="container">
