--- a/pages/boardgame/mice_and_mystics.html
+++ b/pages/boardgame/mice_and_mystics.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>BG Tracker - Mice and Mystics</title>
+        <title>Mice and Mystics - Board Game Campaign Tracker</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="description" content="Board Game Campaign Tracker is a tool to help you track of your Mice and Mystics campaigns">
+        <meta name="keywords" content="board, game, campaign, tracker, mice, mystics">
+
+        <link rel="icon" type="image/png" href="../../images/icons/favicon-32.png" sizes="32x32" />
+        <link rel="icon" type="image/png" href="../../images/icons/favicon-16.png" sizes="16x16" />
+        
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
         <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script> -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
@@ -20,7 +26,10 @@
     <body>
         <nav class="navbar bg-primary" data-bs-theme="dark">
             <div class="container-fluid">
-                <a class="navbar-brand" href="../../index.html">Board Game Tracker</a>
+                <a class="navbar-brand" href="../../index.html">
+                    <img src="../../images/icons/logo.png" alt="Bootstrap" width="32" height="32" class="d-inline-block align-text-top">
+                    Board Game Tracker
+                </a>
             </div>
         </nav>
         <div class="container">
