--- a/pages/boardgame/residentevil.html
+++ b/pages/boardgame/residentevil.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Resident Evil - Board Game Tracker</title>
+    <title>Resident Evil - Board Game Campaign Tracker</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <meta name="description" content="Board Game Campaign Tracker is a tool to help you track of your Resident Evil campaigns">
+    <meta name="keywords" content="board, game, campaign, tracker, resident, evil">
+    <link rel="icon" type="image/png" href="../../images/icons/favicon-32.png" sizes="32x32" />
+    <link rel="icon" type="image/png" href="../../images/icons/favicon-16.png" sizes="16x16" />
+    
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
     <!-- Google tag (gtag.js) -->
@@ -21,7 +27,10 @@
   <body>
     <nav class="navbar bg-primary" data-bs-theme="dark">
       <div class="container-fluid">
-        <a class="navbar-brand" href="../../index.html">Board Game Tracker</a>
+        <a class="navbar-brand" href="../../index.html">
+          <img src="../../images/icons/logo.png" alt="Bootstrap" width="32" height="32" class="d-inline-block align-text-top">
+          Board Game Tracker
+        </a>
       </div>
     </nav>
     <div class="container">
