--- a/pages/boardgame/residentevil.html
+++ b/pages/boardgame/residentevil.html
@@ -742,6 +742,7 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
     <script src="../../js/lib/baseCampaignStatus.js"></script>
+    <script src="../../js/lib/cardBuilder.js"></script>
     <script src="../../js/modules/io.js"></script>
     <script src="../../js/utils.js"></script>
     <script src="../../js/boardgame/residentevil/gameStatus.js"></script>
