--- a/pages/boardgame/residentevil.html
+++ b/pages/boardgame/residentevil.html
@@ -30,7 +30,7 @@
       <div class="container-fluid">
         <a class="navbar-brand" href="../../index.html">
           <img src="../../images/icons/logo.png" alt="Bootstrap" width="32" height="32" class="d-inline-block align-text-top">
-          Board Game Tracker
+          Board Game Campaign Tracker
         </a>
       </div>
     </nav>
