feat: added mission cards

--- a/pages/boardgame/residentevil.html
+++ b/pages/boardgame/residentevil.html
@@ -338,6 +338,20 @@
             </div>
             <div class="row" id="missionDeck"></div>
           </div>
+          <h3>Added Missions</h3>
+          <div class="container">
+            <div class="row">
+              <div class="col">
+                <select class="form-select" aria-label="Item Select" id="addedMissionCardSelect">
+                  <option>Select Mission Card</option>
+                </select>
+              </div>
+              <div class="col mb-3">
+                <button type="button" class="btn btn-primary" onclick="addAddedMissionCardButton()">Add Mission Card</button>
+              </div>
+            </div>
+            <div class="row" id="addedMissionDeck"></div>
+          </div>
           <hr />
           <h3>Encounters</h3>
           <div class="container">
