feat: change color of threat level

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 </li>
                 <li class="list-group-item">
                     <a href="pages/boardgame/residentevil3.html">
-                        <img width="100" height="100" alt="resident evil 3 cover" src="https://m.media-amazon.com/images/W/MEDIAX_792452-T2/images/I/81FUczD294L.jpg" class="img-thumbail">Resident Evil 3: The Board Game
+                        <img width="100" height="100" alt="resident evil 3 cover" src="https://steamforged.com/cdn/shop/products/SFRE3-001-TheBoardGame-Box-3D_700x.png?v=1672933985" class="img-thumbail">Resident Evil 3: The Board Game
                     </a>
                 </li>
             </ul>
