feat: about page

--- a/pages/about.html
+++ b/pages/about.html
@@ -6,12 +6,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="Board Game Campaign Tracker is a tool to help you track of your campaigns without the need of spreadsheet or paper">
         <meta name="keywords" content="board, game, campaign, tracker">
-        <link rel="icon" type="image/png" href="images/icons/favicon-32.png" sizes="32x32" />
-        <link rel="icon" type="image/png" href="images/icons/favicon-16.png" sizes="16x16" />
+        <link rel="icon" type="image/png" href="../images/icons/favicon-32.png" sizes="32x32" />
+        <link rel="icon" type="image/png" href="../images/icons/favicon-16.png" sizes="16x16" />
 
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"></script>
         <!-- Google tag (gtag.js) -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-4H0C61C0KZ"></script>
         <script>
@@ -28,8 +27,8 @@
     <body>
         <nav class="navbar navbar-expand-lg bg-primary" data-bs-theme="dark">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">
-                    <img src="images/icons/logo.png" alt="Logo" width="32" height="32" class="d-inline-block align-text-top">
+                <a class="navbar-brand" href="../index.html">
+                    <img src="../images/icons/logo.png" alt="Logo" width="32" height="32" class="d-inline-block align-text-top">
                     Board Game Campaign Tracker
                 </a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -38,10 +37,10 @@
               <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <a class="nav-link" aria-current="page" href="../index.html">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="pages/about.html">About</a>
+                    <a class="nav-link active" href="#">About</a>
                   </li>
                 </ul>
             </div>
@@ -53,33 +52,32 @@
             </div>
           </nav>
         <div class="container">
-            <h1>Board Game Tracker</h1>
-            <p>A web application to keep track of your board game campaigns. Now you can easily save your game progress without the use of a spreadsheet or papers,
-                just select your game and it's ready to start.
+            <h1>About</h1>
+            <p>
+                This project come to life after I struggled to keep track of the campaigns that I 
+                was playing. It happened more than once of getting lost on what was done between 
+                notes and pictures. Also trying to use a spreadsheet wasn't very helpfull because 
+                I usually don't have a laptod around and spreadsheet isn't very mobile friendelly 
             </p>
-            <h3>Board Games</h3>
-            <ul class="list-group">
-                <li class="list-group-item">
-                    <a href="pages/boardgame/dark_souls.html">
-                        <img width="100" height="100" alt="dark souls cover" src="https://m.media-amazon.com/images/I/71eJzGGOlnL.jpg" class="img-thumbail">Dark Souls: The Board Game
-                    </a>
-                </li>
-                <li class="list-group-item">
-                    <a href="pages/boardgame/mice_and_mystics.html">
-                        <img width="100" height="100" alt="mice and mystics cover" src="https://m.media-amazon.com/images/I/819-WHSONaL.jpg" class="img-thumbail">Mice and Mystics
-                    </a>
-                </li>
-                <li class="list-group-item">
-                    <a href="pages/boardgame/residentevil.html">
-                        <img width="100" height="100" alt="resident evil cover" src="https://cf.geekdo-images.com/-cdkttxVSfDG5nfvTyhOqQ__itemrep/img/i7N82QV2jNvaTgmbcwTJo6Hiz6w=/fit-in/246x300/filters:strip_icc()/pic6465101.png" class="img-thumbail">Resident Evil: The Board Game
-                    </a>
-                </li>
-                <li class="list-group-item">
-                    <a href="pages/boardgame/residentevil3.html">
-                        <img width="100" height="100" alt="resident evil 3 cover" src="https://steamforged.com/cdn/shop/products/SFRE3-001-TheBoardGame-Box-3D_700x.png?v=1672933985" class="img-thumbail">Resident Evil 3: The Board Game
-                    </a>
-                </li>
-            </ul>
+            <p>
+                That's why I create this page, I tried to create a easy way to keep track of your 
+                board games by just accessing a page. And I also tried to build it focusing on mobile 
+                user, because we have a high chance of someone carrying a phone.
+            </p>
+            <p>
+                I have plans to include more games and continue improving this page, but that takes
+                time. Also it's little complex to include a game that I didn't played and don't know 
+                how the players keep track of the campaign. So if exists a game that you really wish 
+                to be included you can head to the project Github 
+                <a href="https://github.com/jdrcabral/boardgametracker">page</a> and create 
+                an issue requesting that game. And if you know a little bit about coding, you can 
+                create the game yourself and I will happily review your code and include you changes.
+            </p>
+            <p>
+                And if you are wondering about it becoming a mobile application, I have another project 
+                for that. At the moment it isn't in a working stage and I at this moment I don't have 
+                much time to work on it, but if you want to give a look at it you can see it 
+                <a href="https://github.com/jdrcabral/bgcampaigntracker">here</a>.</p>
         </div>     
     </body>
 </html>
